--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
-    "deploy": "gh-pages -d dist"
+    "build": "set NODE_ENV=production&&webpack --mode production",
+    "deploy": "gh-pages -d docs"
   },
   "keywords": [],
   "author": "",
